--- a/solidare/portal/templates/base.html
+++ b/solidare/portal/templates/base.html
@@ -1,32 +1,17 @@
 <!DOCTYPE html>
+{% load static %}
  <html lang="pt-br">
  <head>
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>{% block title %}Meu Site{% endblock %}</title>
-     <style>
-         body {
-             font-family: Arial, sans-serif;
-             background-color: #f4f4f4;
-             text-align: center;
-             margin: 0;
-             padding: 0;
-         }
-         .container {
-             width: 80%;
-             max-width: 800px;
-             margin: 50px auto;
-             padding: 20px;
-             background: white;
-             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-             border-radius: 10px;
-         }
-     </style>
-     {% block extra_css %}{% endblock %}
  </head>
- <body>
-     <div class="container">
-         {% block content %}{% endblock %}
-     </div>
- </body>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <link rel="stylesheet" href="{% static 'portal/css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'portal/img/logo.png' %}">
+    <body>
+        <div class="container">
+            {% block content %}{% endblock %}
+        </div>
+    </body>
  </html>
