--- a/solidare/portal/templates/candidatos.html
+++ b/solidare/portal/templates/candidatos.html
@@ -233,6 +233,11 @@
         {% endfor %}
         </tbody>
     </table>
+
+    <a href="{% url 'index' %}">
+        <button type="button">Voltar para o início</button>
+    </a>
+
 </div>
 
 {% endblock %}
