--- a/solidare/portal/templates/login.html
+++ b/solidare/portal/templates/login.html
@@ -4,6 +4,7 @@
 {% block title %}Login{% endblock %}
 
 {% block content %}
+<div class="main-content">
   <div class="auth-container">
     <h2>Login</h2>
 
@@ -33,4 +34,5 @@
       <i class="fas fa-home"></i>
     </a>
   </div>
+</div>
 {% endblock %}
