--- a/solidare/portal/templates/professor.html
+++ b/solidare/portal/templates/professor.html
@@ -7,20 +7,24 @@
     body { margin: 0; font-family: Arial, sans-serif; }
     .container { display: flex; height: 100vh; }
     .sidebar {
-      background-color: #333;
+      background-color: #FBEE4F;
       width: 200px;
       color: white;
       padding: 20px;
     }
-    .sidebar h3 { margin-top: 0; }
+    .sidebar h3 {
+      border-width: 10px;
+      border-color: black;
+      margin-top: 0; 
+    }
 
     .sidebar button {
       display: block;
       width: 100%;
       margin: 10px 0;
       padding: 10px;
-      background-color: #444;
-      color: white;
+      background-color: #ffffff;
+      color: rgb(0, 0, 0);
       border: none;
       border-radius: 4px;
       cursor: pointer;
@@ -29,7 +33,7 @@
     }
 
     .sidebar button:hover {
-      background-color: #555;
+      background-color: #b0b0b0;
     }
 
     .content {
