Alteração dos botões

--- a/solidare/portal/templates/sobre.html
+++ b/solidare/portal/templates/sobre.html
@@ -78,7 +78,7 @@
             <label for="mensagem">Mensagem:</label>
             <textarea id="mensagem" name="mensagem" rows="5" required></textarea>
           </div>
-          <button type="submit" class="btn">Enviar Mensagem</button>
+          <button type="button.btn" class="btn">Enviar Mensagem</button>
         </form>
       </div>
     </div>
