--- a/solidare/portal/static/portal/css/style.css
+++ b/solidare/portal/static/portal/css/style.css
@@ -16,6 +16,8 @@ body {
     border-radius: 10px;
 }
 
+
+
 .home-icon {
     position: absolute;
     top: 20px;
@@ -72,11 +74,6 @@ body {
     margin-top: 20px;
 }
 
-@media (max-width: 768px) {
-    .form-group input, .form-group textarea {
-        width: 95%;
-    }
-}
 
 .form-container {
     position: relative;
@@ -97,14 +94,26 @@ body {
 }
 
 .form-container form input,
-.form-container form select,
-.form-container form textarea {
+.form-container form select {
     width: 100%;
     padding: 10px;
     margin-top: 10px;
     margin-bottom: 15px;
     border: 1px solid #ccc;
     border-radius: 6px;
+    box-sizing: border-box; 
+}
+
+
+
+/* Regra para todos os textareas do site */
+textarea {
+    resize: none;
+    width: 100%;
+    padding: 8px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    font-size: 16px;
     box-sizing: border-box;
 }
 
@@ -221,6 +230,30 @@ body {
     display: flex;
     flex-direction: column;
     gap: 15px;
+}
+
+button.btn {
+    background-color: #007bff;
+    color: #fff;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 6px;
+    font-size: 16px;
+    font-weight: bold;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    width: 100%;
+    margin-top: 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    letter-spacing: 1px;
+    display: inline-block;
+    text-align: center;
+}
+
+button.btn:hover {
+    background-color: #0069d9;
+    transform: translateY(-2px);
+    box-shadow: 0 6px 8px rgba(0, 0, 0, 0.15);
 }
 
 .form-group {
