--- a/solidare/portal/templates/login.html
+++ b/solidare/portal/templates/login.html
@@ -25,7 +25,7 @@
         <input type="password" name="password" id="id_password" placeholder="Digite sua senha" required>
       </div>
 
-      <button type="submit" class="btn">Entrar</button>
+      <button type="button.btn" class="btn">Entrar</button>
     </form>
 
     <p class="auth-link">Não tem uma conta? <a href="{% url 'cadastro_candidato' %}" class="text-link">Cadastre-se</a></p>
