--- a/solidare/portal/templates/professor.html
+++ b/solidare/portal/templates/professor.html
@@ -1,117 +1,16 @@
-<!DOCTYPE html>
-<html lang="pt-br">
+{% extends "base.html" %}
+{% load static %}
+{% block title %}Painel do Professor{% endblock %}
+
+
+
+
+
 <head>
   <meta charset="UTF-8">
   <title>Painel do Professor</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-  <style>
-    body { margin: 0; font-family: Arial, sans-serif; }
-    .container { display: flex; height: calc(100vh - 60px); }
-    
-    /* Header vermelho */
-    .header {
-      background-color: #CE2C25;
-      color: white;
-      height: 60px;
-      display: flex;
-      padding-left: 50px;
-      padding-bottom: 10px;
-      padding: 0 20px;
-      justify-content: space-between;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.2);
-    }
-    
-    .header h2 {
-      margin: 10px;
-    }
-
-    .header .nome_professor {
-      margin-top: 10px;
-    }
-    
-    .toggle-btn {
-      background: none;
-      border: none;
-      color: white;
-      font-size: 24px;
-      cursor: pointer;
-      padding: 5px;
-    }
-    
-    /* Sidebar retrátil */
-    .sidebar {
-      background-color: #CE2C25;
-      width: 250px;
-      color: rgb(0, 0, 0);
-      padding: 20px;
-      transition: all 0.3s ease;
-      position: relative;
-    }
-    
-    .sidebar.closed {
-      margin-left: -290px;
-    }
-    
-    .sidebar h3 {
-      border-width: 10px;
-      border-color: black;
-      margin-top: 0; 
-    }
-
-    .sidebar button {
-      display: block;
-      width: 100%;
-      margin: 10px 0;
-      padding: 10px;
-      background-color: #ffffff;
-      color: rgb(0, 0, 0);
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-      font-size: 16px;
-      text-align: left;
-    }
-
-    .sidebar button:hover {
-      background-color: #b0b0b0;
-    }
-
-    .content {
-      flex-grow: 1;
-      background: #f2f2f2;
-      padding: 20px;
-      transition: all 0.3s ease;
-    }
-    
-
-    
-    .novidades {
-      display: flex;
-      gap: 20px;
-      flex-wrap: wrap;
-    }
-    
-    .card {
-      background: white;
-      padding: 15px;
-      border-radius: 8px;
-      flex: 1;
-      min-width: 250px;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-    }
-    
-    @media (max-width: 768px) {
-      .sidebar {
-        position: absolute;
-        z-index: 100;
-        height: calc(100vh - 60px);
-      }
-      
-      .novidades {
-        flex-direction: column;
-      }
-    }
-  </style>
+  
 </head>
 <body>
   <!-- Header vermelho -->
